--- a/Website 1/HomePage/homepage.css
+++ b/Website 1/HomePage/homepage.css
@@ -1,5 +1,168 @@
-body{
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
-    background-color: #02050A;
-
+body {
+  padding: 0%;
+  margin: 0%;
+  box-sizing: border-box;
+  background-color: #02050a;
+  font-family: Inter;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
+
+.header {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.navbar {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  height: 90px;
+}
+
+.navbar a {
+  font-size: 15px;
+  font-weight: 600;
+  line-height: 1.1em;
+  color: #fff;
+  text-decoration: none;
+}
+.navbar img {
+  width: 100%;
+  height: 44px;
+  transition: linear 0.4S;
+  -webkit-transition: linear 0.4S;
+  -moz-transition: linear 0.4S;
+  -ms-transition: linear 0.4S;
+  -o-transition: linear 0.4S;
+}
+
+img:hover{
+  box-shadow: 0 0 1px #ffffff, 0 0 1px #ffffff, 0 0 5px #55e6a5,
+    0 0 10px #55e6a5, 0 0 10px #55e6a5, 0 0 25px #55e6a5;
+}
+
+.navbar .services {
+  width: 50%;
+  display: flex;
+  justify-content: space-between;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-right: 0;
+}
+.services a {
+  transition: linear 0.1s;
+  -webkit-transition: linear 0.1s;
+  -moz-transition: linear 0.1s;
+  -ms-transition: linear 0.1s;
+  -o-transition: linear 0.1s;
+}
+.services a:hover {
+  text-shadow: 0 0 1px #ffffff, 0 0 1px #ffffff, 0 0 5px #55e6a5,
+    0 0 10px #55e6a5, 0 0 10px #55e6a5, 0 0 10px #55e6a5;
+}
+
+.services:hover a:not(:hover) {
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+
+.hero-btn button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #55e6a5;
+  border: none;
+  text-decoration: none;
+  font-size: 16px;
+  text-align: center;
+  height: 44px;
+  width: 125px;
+  font-weight: 600;
+  transition: ease-in-out 0.2s;
+}
+
+.hero-btn button svg {
+  width: 12px;
+  margin-left: 10px;
+  height: 13px;
+  transition: linear 0.1s;
+  -webkit-transition: linear 0.1s;
+  -moz-transition: linear 0.1s;
+  -ms-transition: linear 0.1s;
+  -o-transition: linear 0.1s;
+}
+
+.hero-btn button:hover{
+    background-color: #fff;
+}
+
+.hero-btn:hover svg:not(:hover) {
+  transform: scale(1.3) rotate(35deg);
+  -webkit-transform: scale(1.3) rotate(35deg);
+  -moz-transform: scale(1.3) rotate(35deg);
+  -ms-transform: scale(1.3) rotate(35deg);
+  -o-transform: scale(1.3) rotate(35deg);
+}
+
+/*Note : Main Css Starts Here */
+.main {
+  color: white;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background: linear-gradient(rgba(0, 0, 0, 1), rgba(16, 146, 85, 0.2)),
+    url(../Assets/bg-banner.jpg);
+  background-position: 70% 0%;
+  background-size: cover;
+  height: 600px;
+}
+
+.data {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0;
+  gap: 0;
+}
+
+.data .data-title {
+  font-size: 140px;
+  font-weight: bolder;
+  margin: 0;
+  padding-bottom: 0px;
+  -webkit-text-stroke-width: 1px;
+  stroke-width: 1px;
+  color: transparent;
+  -webkit-text-stroke-color: #ffffff;
+  stroke: #ffffff;
+  cursor: pointer;
+  transition: linear 0.4s;
+  -webkit-transition: linear 0.4s;
+  -moz-transition: linear 0.4s;
+  -ms-transition: linear 0.4s;
+  -o-transition: linear 0.4s;
+}
+.data-title:hover {
+  text-shadow: 0 0 2px #ffffff, 0 0 10px #ffffff, 0 0 50px #55e6a5,
+    0 0 50px #55e6a5, 0 0 50px #55e6a5, 0 0 50px #55e6a5;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+
+.data .data-subtitle {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bold;
+}
+
+/*Note : Main Css Ends Here */
