--- a/Website 1/HomePage/homepage.css
+++ b/Website 1/HomePage/homepage.css
@@ -45,6 +45,7 @@ body {
 .navbar img:hover {
   box-shadow: 0 0 1px #ffffff, 0 0 1px #ffffff, 0 0 5px #55e6a5,
     0 0 10px #55e6a5, 0 0 10px #55e6a5, 0 0 25px #55e6a5;
+  cursor: pointer;
 }
 
 .navbar .services {
@@ -100,8 +101,6 @@ body {
 
 .hero-btn button:hover {
   background-color: #fff;
-  
-
 }
 
 .hero-btn:hover svg:not(:hover) {
@@ -294,6 +293,12 @@ body {
 .card p {
   font-size: 20px;
   font-weight: bold;
+  transition: ease-in 0.2s;
+  -webkit-transition: ease-in 0.2s;
+  -moz-transition: ease-in 0.2s;
+  -ms-transition: ease-in 0.2s;
+  -o-transition: ease-in 0.2s;
+  cursor: pointer;
 }
 
 .card:hover {
@@ -302,9 +307,184 @@ body {
     0 0 20px #55e6a5, 0 0 20px #55e6a5, 0 0 20px #55e6a5;
 }
 
+.card p:hover {
+  transform: scale(1.05);
+  color: #55e6a5;
+  -webkit-transform: scale(1.05);
+  -moz-transform: scale(1.05);
+  -ms-transform: scale(1.05);
+  -o-transform: scale(1.05);
+}
+
 /*Note : Services Css Ends Here */
 
+/*Note : Creative Section Css Starts Here */
+.creative-section {
+  background-color: #55e6a5;
+  height: 100px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  font-weight: bold;
+  font-size: 27px;
+}
+
+.creative-section span img {
+  width: 20px;
+}
+
+/*Note : Creative Section Css Ends Here */
+
+/* ! Whatsapp Floating Btn Css Starts Here */
+.whatsapp-floating-btn {
+  position: fixed;
+  bottom: 15px;
+  left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
+  cursor: pointer;
+  z-index: 1;
+}
+
+.hidden-whatsapp {
+  z-index: -1;
+  background-color: rgb(45, 212, 106);
+  width: 110px;
+  color: #fff;
+  font-weight: bold;
+  padding: 3px 8px;
+  text-align: center;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
+  pointer-events: none;
+  visibility: hidden;
+  transform: translateX(-70px) scale(0.5);
+  -webkit-transform: translateX(-70px) scale(0.5);
+  -moz-transform: translateX(-70px) scale(0.5);
+  -ms-transform: translateX(-70px) scale(0.5);
+  -o-transform: translateX(-70px) scale(0.5);
+  transition: linear 0.1s;
+  -webkit-transition: linear 0.1s;
+  -moz-transition: linear 0.1s;
+  -ms-transition: linear 0.1s;
+  -o-transition: linear 0.1s;
+}
+
+.whatsapp-floating-btn:hover .hidden-whatsapp {
+  visibility: visible;
+  transition: linear 0.1s;
+  -webkit-transition: linear 0.1s;
+  -moz-transition: linear 0.1s;
+  -ms-transition: linear 0.1s;
+  -o-transition: linear 0.1s;
+  transform: translateX(0px) scale(1);
+  -webkit-transform: translateX(0px) scale(1);
+  -moz-transform: translateX(0px) scale(1);
+  -ms-transform: translateX(0px) scale(1);
+  -o-transform: translateX(0px) scale(1);
+}
+
+/* ! Whatsapp Floating Btn Css Ends Here */
+
+/* Sid: Work With me css */
+.work-with-me {
+  margin-top: 100px;
+
+  color: white;
+
+  height: 550px;
+  width: 100%;
+  display: flex;
+
+  align-items: center;
+  flex-direction: column;
+}
+
+.header-arrow {
+  margin-top: 50px;
+}
+.work-with-me span {
+  color: #55e6a5;
+  font-size: 20px;
+}
+
+.work-title {
+  font-size: 50px;
+  width: 40%;
+  text-align: center;
+  font-weight: 500;
+}
+.big-bg-txt {
+  margin: 0;
+  position: relative;
+  width: 100%;
+  padding: 0;
+}
+.work-bg-text {
+  margin-top: 70px;
+  color: #14171b;
+  font-weight: 600;
+  text-align: center;
+  opacity: 0.7;
+  font-size: 180px;
+  position: absolute;
+  width: 100%;
+  left: 50%;
+  right: 50%;
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.work-ball {
+  height: 170px;
+  width: 170px;
+  background-color: #55e6a5;
+  color: #02050a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  text-align: center;
+  position: absolute;
+  bottom: 200px;
+  z-index: 2;
+  opacity: 0;
+  transform: scale(0) translateY(-900px);
+  -webkit-transform: scale(0) translateY(-900px);
+  -moz-transform: scale(0) translateY(-900px);
+  -ms-transform: scale(0) translateY(-900px);
+  -o-transform: scale(0) translateY(-900px);
+}
+
+.work-ball p {
+  font-size: 25px;
+  font-weight: 600;
+  width: 80%;
+}
+
+/* Sid: Work With me css */
+
 /*Note : Footer Css Starts Here */
+.footer {
+  display: flex;
+  justify-content: center;
+  color: #fff;
+  height: 100px;
+}
 
 /*Note : Footer Css Ends Here */
 
@@ -322,4 +502,18 @@ body {
   -ms-transform: scale(1);
   -o-transform: scale(1);
 }
+.show-ball {
+  opacity: 1;
+  transition: ease-out 0.9s;
+  -webkit-transition: ease-out 0.9s;
+  -moz-transition: ease-out 0.9s;
+  -ms-transition: ease-out 0.9s;
+  -o-transition: ease-out 0.9s;
+  transform: scale(1);
+  -webkit-transform: scale(1);
+  -moz-transform: scale(1);
+  -ms-transform: scale(1);
+  -o-transform: scale(1);
+}
+
 /* ! Animation onscroll */
