--- a/Website 1/HomePage/homepage.css
+++ b/Website 1/HomePage/homepage.css
@@ -347,7 +347,17 @@ body {
   gap: 15px;
   cursor: pointer;
   z-index: 1;
+
 }
+.whatsapp-floating-btn svg{
+  border-radius: 30%;
+  box-shadow: 2px 2px  10px #55e6a5;
+  -webkit-border-radius: 30%;
+  -moz-border-radius: 30%;
+  -ms-border-radius: 30%;
+  -o-border-radius: 30%;
+}
+
 
 .hidden-whatsapp {
   z-index: -1;
@@ -374,6 +384,7 @@ body {
   -moz-transition: linear 0.1s;
   -ms-transition: linear 0.1s;
   -o-transition: linear 0.1s;
+  box-shadow: 1px 1px  10px #55e6a5;
 }
 
 .whatsapp-floating-btn:hover .hidden-whatsapp {
