--- a/Website 1/HomePage/homepage.css
+++ b/Website 1/HomePage/homepage.css
@@ -56,6 +56,11 @@ body {
   padding-bottom: 0;
   padding-right: 0;
 }
+
+/* Note : Hamburger Css Starts Here*/
+
+/* Note : Hamburger Css Ends Here*/
+
 .services a {
   transition: linear 0.1s;
   -webkit-transition: linear 0.1s;
@@ -347,17 +352,15 @@ body {
   gap: 15px;
   cursor: pointer;
   z-index: 1;
-
 }
-.whatsapp-floating-btn svg{
+.whatsapp-floating-btn svg {
   border-radius: 30%;
-  box-shadow: 2px 2px  10px #55e6a5;
+  box-shadow: 2px 2px 10px #55e6a5;
   -webkit-border-radius: 30%;
   -moz-border-radius: 30%;
   -ms-border-radius: 30%;
   -o-border-radius: 30%;
 }
-
 
 .hidden-whatsapp {
   z-index: -1;
@@ -384,7 +387,7 @@ body {
   -moz-transition: linear 0.1s;
   -ms-transition: linear 0.1s;
   -o-transition: linear 0.1s;
-  box-shadow: 1px 1px  10px #55e6a5;
+  box-shadow: 1px 1px 10px #55e6a5;
 }
 
 .whatsapp-floating-btn:hover .hidden-whatsapp {
@@ -443,7 +446,8 @@ body {
   font-weight: 600;
   text-align: center;
   opacity: 0.7;
-  font-size: 180px;
+  /* font-size: 180px; */
+  font-size: 11.5rem;
   position: absolute;
   width: 100%;
   left: 50%;
@@ -499,6 +503,40 @@ body {
 
 /*Note : Footer Css Ends Here */
 
+/* Sid Floating Top Btn Css  Starts here*/
+.topup-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #fff;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  transition: ease-out 0.2s;
+  -webkit-transition: ease-out 0.2s;
+  -moz-transition: ease-out 0.2s;
+  -ms-transition: ease-out 0.2s;
+  -o-transition: ease-out 0.2s;
+  transform: rotate(-90deg);
+  pointer-events: none;
+}
+
+.topup-btn:hover {
+  background-color: #55e6a5;
+  box-shadow: 0px 0px 25px #55e6a5;
+  cursor: pointer;
+}
+
+/* Sid Floating Top Btn Css  Ends here */
+
 /* ! Animation onscroll */
 .show {
   opacity: 1;
@@ -528,3 +566,115 @@ body {
 }
 
 /* ! Animation onscroll */
+
+/* NOte Responsiveness Design */
+
+/* Sid : For Screen Size 1090 */
+@media (max-width: 1090px) {
+  .data .data-title {
+    font-size: 110px;
+
+    display: flex;
+    justify-content: center;
+
+    width: 100%;
+  }
+  .data .data-subtitle {
+    font-size: 100px;
+  }
+  .data .data-desc {
+    font-size: 20px;
+  }
+  .work-bg-text {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 1440px) {
+  .work-bg-text {
+    font-size: 8rem;
+  }
+}
+
+@media (max-width: 768px) {
+  /* ! Hamburger Menu Starts Here*/
+  .hero-btn,
+  .navbar .services {
+    display: none;
+  }
+  .navbar {
+    width: 95%;
+    justify-content: space-between;
+  }
+  .logo {
+    width: 9rem;
+  }
+
+  /* ! Hamburger Menu Ends Here*/
+
+  .data .data-title {
+    font-size: 6rem;
+  }
+
+  .data .data-subtitle {
+    font-size: 5.5rem;
+  }
+  .data .data-desc {
+    font-size: 20px;
+  }
+  .work-bg-text {
+    font-size: 5rem;
+  }
+  .work-bg-text {
+    font-size: 3rem;
+  }
+}
+
+@media (max-width: 320px) {
+  .hero-btn {
+    display: none;
+  }
+  .my-services-data {
+    width: 50%;
+  }
+
+  .my-services-data-desc {
+    font-size: 1rem;
+  }
+  .navbar .services {
+    display: none;
+  }
+  .data .data-title {
+    font-size: 2rem;
+  }
+  .data .data-subtitle {
+    font-size: 1.9rem;
+  }
+  .data .data-desc {
+    font-size: 1rem;
+    width: 100%;
+  }
+
+  .my-services-data-title {
+    font-size: 1rem;
+  }
+  .my-services-data-heading {
+    font-size: 2rem;
+    width: 100%;
+  }
+
+  .work-bg-text {
+    font-size: 5rem;
+  }
+  .work-bg-text {
+    font-size: 3rem;
+  }
+
+  .creative-section {
+    font-size: 0.7rem;
+    height: 3rem;
+  }
+  .creative-section span img {
+    width: 0.7rem;
+  }
+}
